--- a/src/GenerateBill.css
+++ b/src/GenerateBill.css
@@ -8,8 +8,9 @@ body {
   }
   
   .container {
-    max-width: 700px;
-    margin: auto;
+    margin: 10px;
+    padding-top: 1rem;
+    max-width: 800px;
     padding: 40px;
     background: white;
     border-radius: 8px;
@@ -37,6 +38,8 @@ body {
   input[type=number], select, textarea {
     width: 100%;
     padding: 12px;
+    margin-left: 10px;
+    width: 50%;
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
