--- a/src/AllUsers.css
+++ b/src/AllUsers.css
@@ -2,6 +2,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: #4a4a4a; 
   font-size: small; 
+  
+
 }
 
 /* Navbar styles */
@@ -51,10 +53,12 @@ body {
   background-color: #336597; /* Bootstrap primary color */
   color: #fff; /* White text */
   border: none; /* No border */
-  padding: 10px 15px; /* Padding for button */
+  /* Padding for button */
   margin: 5px; /* Spacing between buttons */
   border-radius: 5px; /* Rounded corners */
-  cursor: pointer; /* Pointer cursor on hover */
+  cursor: pointer;
+  padding-right: 1px; 
+  padding-left: 1px;/* Pointer cursor on hover */
 }
 
 .popup-actions button:hover {
