--- a/src/messcut.css
+++ b/src/messcut.css
@@ -4,27 +4,19 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    margin: 1rem;
     font-family: 'Roboto', sans-serif; /* Updated font */
-    background-color: #f0f4f8; /* Light background */
-    min-height: 100vh;
 }
 
-/* Navbar styling */
-
-
-/* Sidebar styling */
-
-
-/* Content container with scroll */
 .messcut-content {
     flex: 1;
-    max-width: 800px;
-    margin: 0 auto;
+    max-width:850px;
+    
     padding: 20px;
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-height: 70vh; /* Set the maximum height */
+    max-height: 80vh; /* Set the maximum height */
     overflow-y: auto; /* Enable vertical scrolling */
 }
 
@@ -60,8 +52,8 @@
 
 /* Button styling */
 .messcut-button {
-    display: inline-block;
-    padding: 10px 20px;
+    display:flex;
+    align-items: center;
     background-color: #6050dc; /* Purple */
     color: #ffffff;
     border: none;
